--- a/book/spring-in-action/exsrc/SpringInAction/pom.xml
+++ b/book/spring-in-action/exsrc/SpringInAction/pom.xml
@@ -21,6 +21,24 @@
       <artifactId>spring-webmvc</artifactId>
       <version>4.3.14.RELEASE</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>4.3.14.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <build>
